--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img class="header__logo" src="#" width="154" height="64" alt="Gllacy Logo">
         <nav class="header__navigation navigation">
           <ul class="navigation__list">
-            <li class="navigation__item catalog"><a href="#">Каталог</a></li>
+            <li class="navigation__item catalog"><a href="catalog.html">Каталог</a></li>
             <li class="navigation__item"><a href="#">Доставка и оплата</a></li>
             <li class="navigation__item"><a href="#">О Компании</a></li>
           </ul>
