Adding icons and content images

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header class="header">
       <div class="wrapper">
-        <img class="header__logo" src="#" width="154" height="64" alt="Gllacy Logo">
+        <img class="header__logo" src="img/logo.svg" width="154" height="64" alt="Gllacy Logo">
         <nav class="header__navigation navigation">
           <ul class="navigation__list">
             <li class="navigation__item catalog"><a href="#">Каталог</a></li>
@@ -58,7 +58,7 @@
         <table class="basket__content">
           <tr>
             <td class="basket__button basket__button--delete">X</td>
-            <td class="basket__item-img"><img src="#" width="33" height="33" alt="Пломбир с апельсиновым джемом"></td>
+            <td class="basket__item-img"><img src="files/basket-1.jpg" width="33" height="33" alt="Пломбир с апельсиновым джемом"></td>
             <td class="basket__item-name">Пломбир с апельсиновым джемом</td>
             <td><span class="basket__item-weight">1,5 кг</span> х <span class="basket__item-price">200 руб</span>.</td>
             <td class="basket__item-total-price">300 руб.</td>
@@ -66,7 +66,7 @@
 
           <tr>
             <td class="basket__button basket__button--delete">X</td>
-            <td class="basket__item-img"><img src="#" width="33" height="33" alt="Клубничный пломбир"></td>
+            <td class="basket__item-img"><img src="files/basket-2.jpg" width="33" height="33" alt="Клубничный пломбир"></td>
             <td class="basket__item-name">Клубничный пломбир с присыпкой из белого шоколада</td>
             <td><span class="basket__item-weight">1,5 кг</span> х <span class="basket__item-price">300 руб</span>.</td>
             <td class="basket__item-total-price">450 руб.</td>
@@ -135,7 +135,7 @@
           <ul class="products__list">
             <li class="products__item">
               <figure>
-                <img src="#" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                <img src="files/product-1-orange.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                 <span>310 ₽/кг</span>
                 <figcaption>Сливочное с апельсиновым джемом и цитрусовой стружкой</figcaption>
               </figure>
@@ -144,7 +144,7 @@
 
             <li class="products__item">
               <figure>
-                <img src="#" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+                <img src="files/product-2-coffee.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
                 <span>380 ₽/кг</span>
                 <figcaption>Сливочно-кофейное с кусочками шоколада</figcaption>
               </figure>
@@ -153,7 +153,7 @@
 
             <li class="products__item">
               <figure>
-                <img src="#" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                <img src="files/product-3-strawberry.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                 <span>355 ₽/кг</span>
                 <figcaption>Сливочно-клубничное с присыпкой из белого шоколада</figcaption>
               </figure>
@@ -162,7 +162,7 @@
 
             <li class="products__item">
               <figure>
-                <img src="#" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+                <img src="files/product-4-cream.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
                 <span>415 ₽/кг</span>
                 <figcaption>Сливочное крем-брюле с карамельной подливкой</figcaption>
               </figure>
@@ -171,7 +171,7 @@
 
             <li class="products__item">
               <figure>
-                <img src="#" width="267" height="267" alt="Сливочное с брусничным джемом">
+                <img src="files/product-5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
                 <span>325 ₽/кг</span>
                 <figcaption>Сливочное с брусничным джемом</figcaption>
               </figure>
@@ -180,7 +180,7 @@
 
             <li class="products__item">
               <figure>
-                <img src="#" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
+                <img src="files/product-6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
                 <span>410 ₽/кг</span>
                 <figcaption>Сливочно-черничное с цельными ягодами черники</figcaption>
               </figure>
@@ -189,7 +189,7 @@
 
             <li class="products__item">
               <figure>
-                <img src="#" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
+                <img src="files/product-7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
                 <span>375 ₽/кг</span>
                 <figcaption>Сливочно-лимонное с карамельной присыпкой</figcaption>
               </figure>
@@ -198,7 +198,7 @@
 
             <li class="products__item">
               <figure>
-                <img src="#" width="267" height="267" alt="Сливочное с шоколадной стружкой">
+                <img src="files/product-8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
                 <span>320 ₽/кг</span>
                 <figcaption>Сливочное с шоколадной стружкой</figcaption>
               </figure>
@@ -207,7 +207,7 @@
 
             <li class="products__item">
               <figure>
-                <img src="#" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+                <img src="files/product-9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
                 <span>440 ₽/кг</span>
                 <figcaption>Сливочно-ванильное с кусочками шоколада</figcaption>
               </figure>
@@ -216,7 +216,7 @@
 
             <li class="products__item">
               <figure>
-                <img src="#" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
+                <img src="files/product-10.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
                 <span>435 ₽/кг</span>
                 <figcaption>Сливочноe с ментоловым сиропом</figcaption>
               </figure>
@@ -225,7 +225,7 @@
 
             <li class="products__item">
               <figure>
-                <img src="#" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
+                <img src="files/product-11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
                 <span>355 ₽/кг</span>
                 <figcaption>Сливочное с кусочками черного шоколада</figcaption>
               </figure>
@@ -234,7 +234,7 @@
 
             <li class="products__item">
               <figure>
-                <img src="#" width="267" height="267" alt="Сливочное с мятным сиропом">
+                <img src="files/product-12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
                 <span>420 ₽/кг</span>
                 <figcaption>Сливочное с мятным сиропом</figcaption>
               </figure>
@@ -276,7 +276,7 @@
 
         <section class="footer__copyright">
           <figure>
-            <img src="#" width="108" height="39" alt="Academy Logo">
+            <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Academy Logo">
             <figcaption>Сделано в HTML Academy © 2019</figcaption>
           </figure>
         </section>
