--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="header">
       <div class="wrapper">
-        <img class="header__logo" src="#" width="154" height="64" alt="Gllacy Logo">
+        <img class="header__logo" src="img/logo.svg" width="154" height="64" alt="Gllacy Logo">
         <nav class="header__navigation navigation">
           <ul class="navigation__list">
             <li class="navigation__item catalog"><a href="catalog.html">Каталог</a></li>
@@ -59,7 +59,7 @@
         <table class="basket__content">
           <tr>
             <td class="basket__button basket__button--delete">X</td>
-            <td class="basket__item-img"><img src="#" width="33" height="33" alt="Пломбир с апельсиновым джемом"></td>
+            <td class="basket__item-img"><img src="files/basket-1.jpg" width="33" height="33" alt="Пломбир с апельсиновым джемом"></td>
             <td class="basket__item-name">Пломбир с апельсиновым джемом</td>
             <td><span class="basket__item-weight">1,5 кг</span> х <span class="basket__item-price">200 руб</span>.</td>
             <td class="basket__item-total-price">300 руб.</td>
@@ -67,7 +67,7 @@
 
           <tr>
             <td class="basket__button basket__button--delete">X</td>
-            <td class="basket__item-img"><img src="#" width="33" height="33" alt="Клубничный пломбир"></td>
+            <td class="basket__item-img"><img src="files/basket-2.jpg" width="33" height="33" alt="Клубничный пломбир"></td>
             <td class="basket__item-name">Клубничный пломбир с присыпкой из белого шоколада</td>
             <td><span class="basket__item-weight">1,5 кг</span> х <span class="basket__item-price">300 руб</span>.</td>
             <td class="basket__item-total-price">450 руб.</td>
@@ -82,21 +82,21 @@
         <section class="main__promo promo">
           <article class="promo__item">
             <figure>
-              <img src="#" width="1045" height="881" alt="Крем-брюле и пломбир с малиновым джемом">
+              <img src="files/promo-1.png" width="1045" height="881" alt="Крем-брюле и пломбир с малиновым джемом">
               <figcaption>Крем-брюле и пломбир с малиновым джемом</figcaption>
             </figure>
           </article>
 
           <article class="promo__item">
             <figure>
-              <img src="#" width="1045" height="881" alt="Шоколадный пломбир и лимонный сорбет">
+              <img src="files/promo-2.png" width="1045" height="881" alt="Шоколадный пломбир и лимонный сорбет">
               <figcaption>Шоколадный пломбир и лимонный сорбет</figcaption>
             </figure>
           </article>
 
           <article class="promo__item">
             <figure>
-              <img src="#" width="1045" height="881" alt="Пломбир с помадкой и клубничный щербет">
+              <img src="files/promo-3.png" width="1045" height="881" alt="Пломбир с помадкой и клубничный щербет">
               <figcaption>Пломбир с помадкой и клубничный щербет</figcaption>
             </figure>
           </article>
@@ -127,7 +127,7 @@
           <ul class="products__list">
             <li class="products__item">
               <figure>
-                <img src="#" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                <img src="files/product-1-orange.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                 <span>310 ₽/кг</span>
                 <figcaption>Сливочное с апельсиновым джемом и цитрусовой стружкой</figcaption>
               </figure>
@@ -135,7 +135,7 @@
 
             <li class="products__item">
               <figure>
-                <img src="#" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+                <img src="files/product-2-coffee.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
                 <span>380 ₽/кг</span>
                 <figcaption>Сливочно-кофейное с кусочками шоколада</figcaption>
               </figure>
@@ -143,7 +143,7 @@
 
             <li class="products__item">
               <figure>
-                <img src="#" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                <img src="files/product-3-strawberry.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                 <span>355 ₽/кг</span>
                 <figcaption>Сливочно-клубничное с присыпкой из белого шоколада</figcaption>
               </figure>
@@ -151,7 +151,7 @@
 
             <li class="products__item">
               <figure>
-                <img src="#" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+                <img src="files/product-4-cream.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
                 <span>415 ₽/кг</span>
                 <figcaption>Сливочное крем-брюле с карамельной подливкой</figcaption>
               </figure>
@@ -237,7 +237,7 @@
 
         <section class="footer__copyright">
           <figure>
-            <img src="#" width="108" height="39" alt="Academy Logo">
+            <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Academy Logo">
             <figcaption>Сделано в HTML Academy © 2019</figcaption>
           </figure>
         </section>
