Fixing headers structure

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="header">
       <div class="wrapper">
-        <img class="header__logo" src="img/logo.svg" width="154" height="64" alt="Gllacy Logo">
+        <a href="index.html"><img class="header__logo" src="img/logo.svg" width="154" height="64" alt="Логотип интернет-магазина мороженого Глейси"></a>
         <nav class="header__navigation navigation">
           <ul class="navigation__list">
             <li class="navigation__item catalog"><a href="catalog.html">Каталог</a></li>
@@ -78,8 +78,10 @@
       </div>
     </header>
     <main class="main">
+      <h1 class="visually-hidden">Интернет-магазин мороженого "Глейси"</h1>
       <div class="wrapper">
         <section class="main__promo promo">
+          <h2 class="visually-hidden">Промо-акция наших товаров</h2>
           <article class="promo__item">
             <figure>
               <img src="files/promo-1.png" width="1045" height="881" alt="Крем-брюле и пломбир с малиновым джемом">
@@ -101,29 +103,31 @@
             </figure>
           </article>
 
-        <a class="promo__special" href="#">Давайте оба!</a>
-        <div class="promo__slider slider">
-          <button class="slider__button" type="button" name="button"></button>
-          <button class="slider__button" type="button" name="button"></button>
-          <button class="slider__button" type="button" name="button"></button>
-        </div>
+          <a class="promo__special" href="#">Давайте оба!</a>
+          <div class="promo__slider slider">
+            <button class="slider__button" type="button" name="button"></button>
+            <button class="slider__button" type="button" name="button"></button>
+            <button class="slider__button" type="button" name="button"></button>
+          </div>
         </section>
 
         <section class="main__special-offer special-offer">
+          <h2 class="visually-hidden">Специальное предложение</h2>
           <article class="special-offer__item">
             <h3 class="special-offer__title">Малинка даром!</h3>
             <p class="special-offer__description">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-            <a href="#" title="Хочу варенье!">Хочу варенье!</a>
+            <a href="#">Хочу варенье!</a>
           </article>
 
           <article class="special-offer__item">
             <h3 class="special-offer__title">Шоколадки даром!</h3>
             <p class="special-offer__description">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-            <a href="#" title="Хочу варенье!">Хочу шоколадки!</a>
+            <a href="#">Хочу шоколадки!</a>
           </article>
         </section>
 
         <section class="main__products products">
+          <h2 class="visually-hidden">Раздел товаров</h2>
           <ul class="products__list">
             <li class="products__item">
               <figure>
@@ -160,6 +164,7 @@
         </section>
 
         <section class="main__advantages advantages">
+          <h2 class="visually-hidden">Наши преимущества</h2>
           <h3 class="advantages__title">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
           <ul class="advantages__list">
             <li class="advantages__item advantages__item--production">
@@ -178,13 +183,15 @@
         </section>
 
         <section class="main__blog blog">
+          <h2 class="visually-hidden">Блог нашего магазина</h2>
           <div class="blog__wrapper">
             <p>Новое в нашем блоге</p>
-            <a class="blog__article" href="#" title="10 способов сервировки фруктовых щербетов к столу">10 способов сервировки фруктовых щербетов к столу</a>
+            <a class="blog__article" href="#">10 способов сервировки фруктовых щербетов к столу</a>
           </div>
         </section>
 
         <section class="main__subscription subscription">
+          <h2 class="visually-hidden">Оформление подписки</h2>
           <p class="subscription__text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
           <form class="subscription__form">
             <input type="email" name="user-email" placeholder="email@example.com">
@@ -193,6 +200,7 @@
         </section>
 
         <section class="main__contacts contacts">
+          <h2 class="visually-hidden">Наши контакты</h2>
           <div class="contacts__wrapper">
             <p>Адрес главного офиса и офлайн-магазина:</p>
             <p class="contacts__address">ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
@@ -205,6 +213,7 @@
       </div>
 
       <div class="main__popup popup">
+        <h2 class="visually-hidden">Форма обратной связи</h2>
         <div class="popup__wrapper">
           <h3 class="popup__title">Мы обязательно вам ответим!</h3>
           <button type="button" name="button">X</button>
@@ -222,23 +231,23 @@
     <footer class="footer">
       <div class="wrapper">
         <section class="footer__social social">
-          <a class="social__item" href="#" title="Twitter"></a>
-          <a class="social__item" href="#" title="Instagram"></a>
-          <a class="social__item" href="#" title="Facebook"></a>
-          <a class="social__item" href="#" title="Vkontakte"></a>
+          <a class="social__item" href="#" title="Наш Twitter"></a>
+          <a class="social__item" href="#" title="Наш Instagram"></a>
+          <a class="social__item" href="#" title="Наш Facebook"></a>
+          <a class="social__item" href="#" title="Наш Vkontakte"></a>
         </section>
 
         <section class="footer__about about">
-          <a class="about__item" href="#" title="Для поставщиков">Для поставщиков</a>
-          <a class="about__item" href="#" title="Наши документы">Наши документы</a>
-          <a class="about__item" href="#" title="О производстве">О производстве</a>
-          <a class="about__item" href="#" title="Экологические стандарты">Экологические стандарты</a>
+          <a class="about__item" href="#">Для поставщиков</a>
+          <a class="about__item" href="#">Наши документы</a>
+          <a class="about__item" href="#">О производстве</a>
+          <a class="about__item" href="#">Экологические стандарты</a>
         </section>
 
         <section class="footer__copyright">
           <figure>
-            <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Academy Logo">
-            <figcaption>Сделано в HTML Academy © 2019</figcaption>
+            <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Логотип HTML Academy">
+            <figcaption>Сделано в <a href="https://up.htmlacademy.ru/htmlcss/27">HTML Academy</a> © 2019</figcaption>
           </figure>
         </section>
       </div>
