--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header class="header">
       <div class="wrapper">
-        <img class="header__logo" src="img/logo.svg" width="154" height="64" alt="Gllacy Logo">
+        <a href="index.html"><img class="header__logo" src="img/logo.svg" width="154" height="64" alt="Логотип интернет-магазина мороженого Глейси"></a>
         <nav class="header__navigation navigation">
           <ul class="navigation__list">
             <li class="navigation__item catalog"><a href="#">Каталог</a></li>
@@ -87,6 +87,7 @@
         <h1 class="catalog__title">Сливочное мороженое</h1>
 
         <section class="catalog__filters filters">
+          <h2 class="visually-hidden">Фильтры товаров</h2>
           <form method="get" class="filters__form">
             <div class="filters__row">
               <div class="filters__item sorting">
@@ -132,6 +133,7 @@
         </section>
 
         <section class="catalog__products products">
+          <h2 class="visually-hidden">Наша продукция</h2>
           <ul class="products__list">
             <li class="products__item">
               <figure>
@@ -245,6 +247,7 @@
         </section>
 
         <section class="catalog__pagination pagination">
+          <h2 class="visually-hidden">Переход на другую страницу</h2>
           <ul class="pagination__list">
             <li class="pagination__item pagination__item--back"><a href="#" title="Назад">&lt;</a></li>
             <li class="pagination__item pagination__item--active"><a href="#" title="1">1</a></li>
@@ -261,23 +264,23 @@
     <footer class="footer">
       <div class="wrapper">
         <section class="footer__social social">
-          <a class="social__item" href="#" title="Twitter"></a>
-          <a class="social__item" href="#" title="Instagram"></a>
-          <a class="social__item" href="#" title="Facebook"></a>
-          <a class="social__item" href="#" title="Vkontakte"></a>
+          <a class="social__item" href="#" title="Наш Twitter"></a>
+          <a class="social__item" href="#" title="Наш Instagram"></a>
+          <a class="social__item" href="#" title="Наш Facebook"></a>
+          <a class="social__item" href="#" title="Наш Vkontakte"></a>
         </section>
 
         <section class="footer__about about">
-          <a class="about__item" href="#" title="Для поставщиков">Для поставщиков</a>
-          <a class="about__item" href="#" title="Наши документы">Наши документы</a>
-          <a class="about__item" href="#" title="О производстве">О производстве</a>
-          <a class="about__item" href="#" title="Экологические стандарты">Экологические стандарты</a>
+          <a class="about__item" href="#">Для поставщиков</a>
+          <a class="about__item" href="#">Наши документы</a>
+          <a class="about__item" href="#">О производстве</a>
+          <a class="about__item" href="#">Экологические стандарты</a>
         </section>
 
         <section class="footer__copyright">
           <figure>
-            <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Academy Logo">
-            <figcaption>Сделано в HTML Academy © 2019</figcaption>
+            <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Логотип HTML Academy">
+            <figcaption>Сделано в <a href="https://up.htmlacademy.ru/htmlcss/27">HTML Academy</a> © 2019</figcaption>
           </figure>
         </section>
       </div>
