Adding correct names for radio and checkbox inputs in catalog

--- a/catalog.html
+++ b/catalog.html
@@ -112,20 +112,20 @@
               </div>
               <div class="filters__item fat-content">
                 <span class="fat-content__title">Жирность:</span>
-                <label for="0-persent"><input type="radio" name="" id="0-persent">0%</label>
-                <label for="low-10-persent"><input type="radio" name="" id="low-10-persent" checked>до 10%</label>
-                <label for="low-30-persent"><input type="radio" name="" id="low-30-persent">до 30%</label>
-                <label for="higher-30-persent"><input type="radio" name="" id="higher-30-persent">выше 30%</label>
+                <label for="0-persent"><input type="radio" name="fat-content" value="0" id="0-persent">0%</label>
+                <label for="low-10-persent"><input type="radio" name="fat-content" value="low-10" id="low-10-persent" checked>до 10%</label>
+                <label for="low-30-persent"><input type="radio" name="fat-content" value="low-30" id="low-30-persent">до 30%</label>
+                <label for="over-30-persent"><input type="radio" name="fat-content" value="over-30" id="over-30-persent">выше 30%</label>
               </div>
 
             </div>
             <div class="filters__row">
               <div class="filters__item additives">
-                <label for="additives-choco"><input class="additives__item" type="checkbox" name="" id="additives-choco" checked>шоколадные</label>
-                <label for="additives-sugar"><input class="additives__item" type="checkbox" name="" id="additives-sugar" checked>сахарные присыпки</label>
-                <label for="additives-fruits"><input class="additives__item" type="checkbox" name="" id="additives-fruits">фрукты</label>
-                <label for="additives-syrup"><input class="additives__item" type="checkbox" name="" id="additives-syrup">сиропы</label>
-                <label for="additives-jam"><input class="additives__item" type="checkbox" name="" id="additives-jam">джемы</label>
+                <label for="additives-choco"><input class="additives__item" type="checkbox" name="choco" id="additives-choco" checked>шоколадные</label>
+                <label for="additives-sugar"><input class="additives__item" type="checkbox" name="sugar" id="additives-sugar" checked>сахарные присыпки</label>
+                <label for="additives-fruits"><input class="additives__item" type="checkbox" name="fruits" id="additives-fruits">фрукты</label>
+                <label for="additives-syrup"><input class="additives__item" type="checkbox" name="syrup" id="additives-syrup">сиропы</label>
+                <label for="additives-jam"><input class="additives__item" type="checkbox" name="jam" id="additives-jam">джемы</label>
               </div>
               <button type="submit" name="button">Применить</button>
             </div>
