Fixing html validator errors

--- a/catalog.html
+++ b/catalog.html
@@ -92,7 +92,7 @@
             <div class="filters__row">
               <div class="filters__item sorting">
                 <label for="sorting-params">Сортировка</label>
-                <select class="sorting__items" name="" id="sorting-params">
+                <select class="sorting__items" name="sorting-paramets" id="sorting-params">
                   <option value="popular" selected>по популярности</option>
                   <option value="cheap">сначала недорогие</option>
                   <option value="expensive">сначала дорогие</option>
@@ -264,6 +264,7 @@
     <footer class="footer">
       <div class="wrapper">
         <section class="footer__social social">
+          <h2 class="visually-hidden">Мы в соцсетях</h2>
           <a class="social__item" href="#" title="Наш Twitter"></a>
           <a class="social__item" href="#" title="Наш Instagram"></a>
           <a class="social__item" href="#" title="Наш Facebook"></a>
@@ -271,6 +272,7 @@
         </section>
 
         <section class="footer__about about">
+          <h2 class="visually-hidden">Дополнительная информация</h2>
           <a class="about__item" href="#">Для поставщиков</a>
           <a class="about__item" href="#">Наши документы</a>
           <a class="about__item" href="#">О производстве</a>
@@ -278,6 +280,7 @@
         </section>
 
         <section class="footer__copyright">
+          <h2 class="visually-hidden">Правообладателям</h2>
           <figure>
             <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Логотип HTML Academy">
             <figcaption>Сделано в <a href="https://up.htmlacademy.ru/htmlcss/27">HTML Academy</a> © 2019</figcaption>
