--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <section class="main__promo promo">
           <h2 class="visually-hidden">Промо-акция наших товаров</h2>
           <article class="promo__item">
+            <h3 class="visually-hidden">Промо крем-брюле и пломбир с малиновым джемом</h3>
             <figure>
               <img src="files/promo-1.png" width="1045" height="881" alt="Крем-брюле и пломбир с малиновым джемом">
               <figcaption>Крем-брюле и пломбир с малиновым джемом</figcaption>
@@ -90,6 +91,7 @@
           </article>
 
           <article class="promo__item">
+            <h3 class="visually-hidden">Промо шоколадный пломбир и лимонный сорбет</h3>
             <figure>
               <img src="files/promo-2.png" width="1045" height="881" alt="Шоколадный пломбир и лимонный сорбет">
               <figcaption>Шоколадный пломбир и лимонный сорбет</figcaption>
@@ -97,6 +99,7 @@
           </article>
 
           <article class="promo__item">
+            <h3 class="visually-hidden">Промо пломбир с помадкой и клубничный щербет</h3>
             <figure>
               <img src="files/promo-3.png" width="1045" height="881" alt="Пломбир с помадкой и клубничный щербет">
               <figcaption>Пломбир с помадкой и клубничный щербет</figcaption>
@@ -231,6 +234,7 @@
     <footer class="footer">
       <div class="wrapper">
         <section class="footer__social social">
+          <h2 class="visually-hidden">Мы в соцсетях</h2>
           <a class="social__item" href="#" title="Наш Twitter"></a>
           <a class="social__item" href="#" title="Наш Instagram"></a>
           <a class="social__item" href="#" title="Наш Facebook"></a>
@@ -238,6 +242,7 @@
         </section>
 
         <section class="footer__about about">
+          <h2 class="visually-hidden">Дополнительная информация</h2>
           <a class="about__item" href="#">Для поставщиков</a>
           <a class="about__item" href="#">Наши документы</a>
           <a class="about__item" href="#">О производстве</a>
@@ -245,6 +250,7 @@
         </section>
 
         <section class="footer__copyright">
+          <h2 class="visually-hidden">Правообладателям</h2>
           <figure>
             <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Логотип HTML Academy">
             <figcaption>Сделано в <a href="https://up.htmlacademy.ru/htmlcss/27">HTML Academy</a> © 2019</figcaption>
